@@ -89,22 +89,37 @@ type
 
   TDigItPhysicalSize = class(TPersistent)
     private
-      rPhysicalRect: TPhysicalRect;
-      Bitmap: TBGRABitmap; //Used only to convert to pixels
+      rCSSUnit: TCSSUnit;
+      rWidth,
+      rHeight: Single;
+      rResolution: TImageResolutionInfo;
+      rBitmapWidth, rBitmapHeight: Integer;
 
       function GetPhysicalUnit: TPhysicalUnit;
       procedure SetPhysicalUnit(AValue: TPhysicalUnit);
 
     public
-      constructor Create(ABitmap: TBGRABitmap);
+      constructor Create(AResolution: TImageResolutionInfo;
+                         ABitmapWidth, ABitmapHeight: Integer); overload;
+      constructor Create(AResolution: TImageResolutionInfo;
+                         ABitmapPhysicalUnit: TPhysicalUnit; ABitmapWidth, ABitmapHeight: Single); overload;
+
       procedure SetValues(APhysicalUnit: TPhysicalUnit; AWidth, AHeight: Single);
 
-      property PhysicalRect: TPhysicalRect read rPhysicalRect;
+      procedure SetBitmapValues(ABitmap: TBGRABitmap); overload;
+      procedure SetBitmapValues(AResolution: TImageResolutionInfo;
+                                ABitmapPhysicalUnit: TPhysicalUnit; ABitmapWidth, ABitmapHeight: Single); overload;
+
+      procedure GetPixelsSize(var pWidth, pHeight: Integer);
+
+      property BitmapWidth: Integer read rBitmapWidth write rBitmapWidth;
+      property BitmapHeight: Integer read rBitmapHeight write rBitmapHeight;
+      property Resolution: TImageResolutionInfo read rResolution write rResolution;
 
     published
       property PhysicalUnit: TPhysicalUnit read GetPhysicalUnit write SetPhysicalUnit;
-      property Width: Single read rPhysicalRect.Right write rPhysicalRect.Right;
-      property Height: Single read rPhysicalRect.Bottom write rPhysicalRect.Bottom;
+      property Width: Single read rWidth write rWidth;
+      property Height: Single read rHeight write rHeight;
     end;
 
   TSourceFile = packed record
@@ -143,8 +158,10 @@ type
 function PhysicalToCSSUnit(ASourceUnit: TPhysicalUnit): TCSSUnit;
 function CSSToPhysicalUnit(ASourceUnit: TCSSUnit): TPhysicalUnit;
 
-function CSSToResolutionUnit(ASourceUnit: TCSSUnit): TResolutionUnit;
 
+//THIS FUNCTIONS ARE TEMPORARY
+//until pull request #297 in BGRABitmap is approved and subsequent work on ImageManipulation to change the unit of measurement
+function CSSToResolutionUnit(ASourceUnit: TCSSUnit): TResolutionUnit;
 function PhysicalToResolutionUnit(ASourceUnit: TPhysicalUnit): TResolutionUnit;
 function ResolutionToPhysicalUnit(ASourceUnit: TResolutionUnit): TPhysicalUnit;
 
@@ -220,30 +237,99 @@ end;
 { TDigItPhysicalSize }
 
 procedure TDigItPhysicalSize.SetPhysicalUnit(AValue: TPhysicalUnit);
+var
+   newUnit: TCSSUnit;
+   tmpWidth,
+   tmpHeight: Single;
+
 begin
-  if (AValue<>CSSToPhysicalUnit(rPhysicalRect.PhysicalUnit)) then
+  if (AValue<>CSSToPhysicalUnit(rCSSUnit)) then
   begin
-    PhysicalSizeConvert(rPhysicalRect, PhysicalToCSSUnit(AValue), Bitmap);
+    newUnit:= PhysicalToCSSUnit(AValue);
+
+    if (rCSSUnit = TCSSUnit.cuPercent)
+    then begin
+           rHeight:= PixelsToPhysicalSize(rHeight * rBitmapHeight / 100,
+                                          rResolution.ResolutionUnit, rResolution.ResolutionY, newUnit);
+           rWidth:= PixelsToPhysicalSize(rWidth * rBitmapWidth / 100,
+                                         rResolution.ResolutionUnit, rResolution.ResolutionX, newUnit);
+         end
+    else begin
+           if (newUnit = TCSSUnit.cuPercent)
+           then begin
+                  rHeight:= rHeight * 100 / rBitmapHeight;
+                  rWidth:= rWidth * 100 / rBitmapWidth;
+                end
+           else PhysicalSizeConvert(rCSSUnit, rWidth, rHeight, newUnit, rResolution);
+         end;
   end;
 end;
 
 function TDigItPhysicalSize.GetPhysicalUnit: TPhysicalUnit;
 begin
-  Result:= CSSToPhysicalUnit(rPhysicalRect.PhysicalUnit);
+  Result:= CSSToPhysicalUnit(rCSSUnit);
 end;
 
-constructor TDigItPhysicalSize.Create(ABitmap: TBGRABitmap);
+constructor TDigItPhysicalSize.Create(AResolution: TImageResolutionInfo; ABitmapWidth, ABitmapHeight: Integer);
 begin
   inherited Create;
 
-  Bitmap:= ABitmap;
+  rResolution:= AResolution;
+  rBitmapWidth:= ABitmapWidth;
+  rBitmapHeight:= ABitmapHeight;
+end;
+
+constructor TDigItPhysicalSize.Create(AResolution: TImageResolutionInfo;
+                                      ABitmapPhysicalUnit: TPhysicalUnit; ABitmapWidth, ABitmapHeight: Single);
+begin
+  inherited Create;
+
+  SetBitmapValues(AResolution, ABitmapPhysicalUnit, ABitmapWidth, ABitmapHeight);
 end;
 
 procedure TDigItPhysicalSize.SetValues(APhysicalUnit: TPhysicalUnit; AWidth, AHeight: Single);
 begin
-  rPhysicalRect.PhysicalUnit:= PhysicalToCSSUnit(APhysicalUnit);
-  rPhysicalRect.Right:= AWidth;
-  rPhysicalRect.Bottom:= AHeight;
+  rCSSUnit:= PhysicalToCSSUnit(APhysicalUnit);
+  rWidth:= AWidth;
+  rHeight:= AHeight;
+end;
+
+procedure TDigItPhysicalSize.SetBitmapValues(ABitmap: TBGRABitmap);
+begin
+  if (ABitmap <> nil) then
+  begin
+    rBitmapWidth:= ABitmap.Width;
+    rBitmapHeight:= ABitmap.Height;
+    rResolution:= ABitmap.ResolutionInfo;
+  end;
+end;
+
+procedure TDigItPhysicalSize.SetBitmapValues(AResolution: TImageResolutionInfo;
+                                             ABitmapPhysicalUnit: TPhysicalUnit; ABitmapWidth, ABitmapHeight: Single);
+begin
+  rResolution:= AResolution;
+  rBitmapHeight:= HalfUp(PhysicalSizeToPixels(ABitmapHeight,
+                                              rResolution.ResolutionUnit, rResolution.ResolutionY,
+                                              PhysicalToCSSUnit(ABitmapPhysicalUnit)));
+  rBitmapWidth:= HalfUp(PhysicalSizeToPixels(ABitmapWidth,
+                                             rResolution.ResolutionUnit, rResolution.ResolutionX,
+                                             PhysicalToCSSUnit(ABitmapPhysicalUnit)));
+end;
+
+procedure TDigItPhysicalSize.GetPixelsSize(var pWidth, pHeight: Integer);
+var
+   sWidth, sHeight: Single;
+
+begin
+  if (rCSSUnit = TCSSUnit.cuPercent)
+  then begin
+         pHeight:= HalfUp(rHeight * 100 / rBitmapHeight);
+         pWidth:= HalfUp(rWidth * 100 / rBitmapWidth);
+       end
+  else begin
+         pHeight:= HalfUp(PhysicalSizeToPixels(rHeight, rResolution.ResolutionUnit, rResolution.ResolutionY, rCSSUnit));
+         pWidth:= HalfUp(PhysicalSizeToPixels(rWidth, rResolution.ResolutionUnit, rResolution.ResolutionX, rCSSUnit));
+       end;
 end;
 
 initialization
