@@ -1,7 +1,13 @@
 DigIt CHANGE LOG
 ======================
 
-2025/07/16 Use of Bitmap e PhysicalRect in TDigItPhysicalSize;
+2025/07/22 Added defaultResolution, BitmapWidth/Height to PhysicalSize;
+           Added GetPixelsSize and SetBitmapValues to PhysicalSize
+           Added defaultResolution to Session;
+           Use of PageSize.SetBitmapValues on Session.LoadImage;
+           Use of PageSize.GetPixelsSize on Session.ResizeImage;
+
+        16 Use of Bitmap e PhysicalRect in TDigItPhysicalSize;
            Use of BGRABitmap PhysicalSizeConvert (pull req Pending);
 
         15 Added Session OnCropModeChange;
